# sel

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  MODULE.bazel
.github/: codecov.yml
.github/actions/ci-env-setup/: action.yml
.github/workflows/: check.yml  ci.bazelrc  external-cache.yml
.zed/: settings.json
rules/: cc_multi_test.bzl
sel/: BUILD.bazel  constant.hpp  contract.hpp  leaf.hpp  multiplies.hpp  operation.hpp  plus.hpp  sel.hpp  strongly_ordered.hpp  term.hpp  term_promotable.hpp  transform.hpp  tree.hpp  variable.hpp
sel/detail/: BUILD.bazel  infix_operation_formatter.hpp  is_specialization_of.hpp  nary_op_formatter.hpp  string_literal.hpp  transform.hpp  tuple_ref.hpp  tuple_transform.hpp  tuple_transform_reduce.hpp
sel/test/: BUILD.bazel  constant_test.cpp  dummy_test.cpp  nary_op_test.cpp  plus_test.cpp  transform_test.cpp  tree_test.cpp  variable_test.cpp
test/: BUILD.bazel  dummy_test.cpp
toolchain/: BUILD.bazel  extension.bzl
tools/: BUILD.bazel  tidy_targets.cquery
tools/nix/: flake.nix
tools/xcode/: BUILD.bazel
