load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//sel:__subpackages__"])

cc_library(
    name = "infix_operation_formatter",
    hdrs = ["infix_operation_formatter.hpp"],
    deps = [":string_literal"],
)

cc_library(
    name = "is_specialization_of",
    hdrs = ["is_specialization_of.hpp"],
)

cc_library(
    name = "tuple_ref",
    hdrs = ["tuple_ref.hpp"],
)

cc_library(
    name = "tuple_transform_reduce",
    hdrs = ["tuple_transform_reduce.hpp"],
)

cc_library(
    name = "string_literal",
    hdrs = ["string_literal.hpp"],
)
