load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "plus_test",
    size = "small",
    srcs = ["plus_test.cpp"],
    deps = [
        "//sel:plus",
        "//sel:variable",
        "@skytest",
    ],
)

cc_test(
    name = "variable_test",
    size = "small",
    srcs = ["variable_test.cpp"],
    deps = [
        "//sel:variable",
        "@skytest",
    ],
)
