load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "constant_test",
    size = "small",
    srcs = ["constant_test.cpp"],
    deps = [
        "//sel:constant",
        "@skytest",
    ],
)

cc_test(
    name = "nary_op_test",
    size = "small",
    srcs = ["nary_op_test.cpp"],
    deps = [
        "//sel:constant",
        "//sel:multiplies",
        "//sel:plus",
        "//sel:variable",
        "@skytest",
    ],
)

cc_test(
    name = "transform_test",
    size = "small",
    srcs = ["transform_test.cpp"],
    deps = [
        "//sel:tree",
        "//sel:transform",
        "//sel:constant",
        "//sel:variable",
        "//sel:plus",
        "//sel:multiplies",
        "@skytest",
    ],
)

cc_test(
    name = "tree_test",
    size = "small",
    srcs = ["tree_test.cpp"],
    deps = [
        "//sel:constant",
        "//sel:multiplies",
        "//sel:plus",
        "//sel:tree",
        "//sel:variable",
        "@skytest",
    ],
)

cc_test(
    name = "variable_test",
    size = "small",
    srcs = ["variable_test.cpp"],
    deps = [
        "//sel:variable",
        "@skytest",
    ],
)
