load("//rules:cc_multi_test.bzl", "cc_multi_test")

cc_multi_test(
    name = "constant_test",
    srcs = ["constant_test.cpp"],
    deps = [
        "//sel:constant",
        "@skytest",
    ],
)

cc_multi_test(
    name = "nary_op_test",
    srcs = ["nary_op_test.cpp"],
    deps = [
        "//sel:constant",
        "//sel:multiplies",
        "//sel:plus",
        "//sel:variable",
        "@skytest",
    ],
)

cc_multi_test(
    name = "tree_test",
    srcs = ["tree_test.cpp"],
    deps = [
        "//sel:constant",
        "//sel:multiplies",
        "//sel:plus",
        "//sel:tree",
        "//sel:variable",
        "@skytest",
    ],
)

cc_multi_test(
    name = "variable_test",
    srcs = ["variable_test.cpp"],
    deps = [
        "//sel:variable",
        "@skytest",
    ],
)
